# pi-clicktrack

./: README.md  clicktrack.service  deploy.sh  diagnose.sh  fix-audio.sh  install-service.sh  install.sh  pyproject.toml  requirements.txt  setup-bluetooth-midi.sh  test-audio.py  test-midi.py  test-service-audio.sh  uninstall.sh
config/: config.yaml  logging.yaml
docs/: API.md  BLUETOOTH_MIDI_MANUAL.md  BLUETOOTH_MIDI_SETUP.md  EXAMPLES.md  MIDI_QUICK_START.md  MIDI_SETUP.md
src/clicktrack/: __init__.py  logging_config.py  main.py  midi_handler.py  models.py  playback_engine.py  set_manager.py  set_screen_controller.py  song_manager.py  storage.py  web_server.py
src/clicktrack_player.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
templates/: base.html  play.html  sets.html  songs.html
tests/: __init__.py
tests/properties/: __init__.py
tests/unit/: __init__.py  test_midi_handler.py  test_models_basic.py  test_playback_engine.py  test_set_manager.py  test_set_screen_controller.py  test_song_manager.py  test_storage.py  test_web_server.py
